--- a/views/layout.pug
+++ b/views/layout.pug
@@ -35,9 +35,16 @@ html(lang="en")
             tbody(id="tr_body")
             tfoot 
               tr 
-                th(colspan="9") Filtrar por: 
+                th(colspan="2") Filtrar por: 
+                th(colspan="3") 
                   label(for="filter") Pacientes dados de alta
-                  input(type="checkbox" name="filter" id="filter")
+                  input(type="checkbox" name="filter" id="filter" value="is")
+                th(colspan="2")  
+                  label(for="sinAdm") Pacientes sin admisiones
+                  input(type="checkbox" name="sinAdm" id="sinAdm")
+                th(colspan="2")  
+                  label(for="pending") Turnos Programados
+                  input(type="checkbox" name="pending" id="pending")
         block main_right
     template(id="my_template")
       tr
