--- a/public/styles/login.css
+++ b/public/styles/login.css
@@ -3,10 +3,9 @@
   flex-direction: column;
   background-color: rgba(0, 0, 0, 0.7);
   justify-content: center;
-  border-radius: 20px;
   margin-bottom: 100px;
+  border-radius: 20px;
   align-items: center;
-  position: absolute;
   height: auto;
   width: 260px;
   color: rgba(255, 255, 255, 0.7);
@@ -49,6 +48,7 @@ button:hover {
   display: none;
   font-size: 12pt;
   text-align: center;
+  font-weight: bold;
 }
 
 .ayuda {
