--- a/views/layout.pug
+++ b/views/layout.pug
@@ -9,7 +9,6 @@ html(lang="en")
     link(rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css")
     //- Style Layout
     link(rel="stylesheet" href="../public/styles/index.css")
-    link(rel="stylesheet" href="../public/styles/dinamic.css")
     //- Other Styles
     each style in styles
       link(rel="stylesheet" href=style)
@@ -20,38 +19,8 @@ html(lang="en")
     main
       .the_main
         block left_main
-        #main.main_center 
-          table(id="myTable" class="table table-striped table-dark ") 
-            thead 
-              tr
-                th(style="text-align: center; width: 10px;") #
-                th(style="width: 100px;") Nombre
-                th(style="width: 100px;") Apellido
-                th(style="width: 100px;") DNI
-                th(style="width: 130px;") Egreso
-                th(style="width: 100px;") Contacto
-                th(style="width: 300px;") eMail
-                th(colspan="2") 
-            tbody(id="tr_body")
-            tfoot 
-              tr 
-                th(colspan="2") Filtrar por: 
-                th(colspan="3") 
-                  label(for="filter") Pacientes dados de alta
-                  input(type="checkbox" name="filter" id="filter" value="is")
-                th(colspan="2")  
-                  label(for="sinAdm") Pacientes sin admisiones
-                  input(type="checkbox" name="sinAdm" id="sinAdm")
-                th(colspan="2")  
-                  label(for="pending") Turnos Programados
-                  input(type="checkbox" name="pending" id="pending")
+        block main_center
         block main_right
-    template(id="my_template")
-      tr
-        td(style="width: 85px;")
-          button.update Actualizar
-        td(style="width: 85px;")
-          button.delete Eliminar
     footer 
       block footer
       .footer 
