Si algo esta mal es por esto

--- a/views/components/table.pug
+++ b/views/components/table.pug
@@ -28,3 +28,9 @@ template(id="my_template")
       button.update Actualizar
     td(style="width: 85px;")
       button.delete Eliminar
+template(id="my_template2")
+  tr
+    td(style="width: 85px;")
+      button.report Reportar
+    td(style="width: 85px;")
+      button.info Informacion
